@@ -172,7 +172,7 @@ jobs:
       - run:
           name: "Validate release"
           command: |
-            ./scripts/validate.sh "${CIRCLE_TAG}"
+            ./.github/actions/validate.sh "${CIRCLE_TAG}"
       - run:
           name: "Installs release tools prerequisites"
           command: |
