@@ -1,28 +1,0 @@
-#!/bin/bash
-
-sem_ver_pattern="^[vV]?(0|[1-9][0-9]*)\\.(0|[1-9][0-9]*)\\.(0|[1-9][0-9]*)(\\-[0-9A-Za-z-]+(\\.[0-9A-Za-z-]+)*)?(\\+[0-9A-Za-z-]+(\\.[0-9A-Za-z-]+)*)?$"
-
-die () {
-    echo >&2 "$@"
-    exit 1
-}
-
-validate_version() {
-  version=$1
-
-  if [[ ${version} == "" ]]; then
-    die "Undefined version (pass using -v|--version). Please use semantic version. Read more about it here: https://semver.org/ \n\n"
-  fi
-
-  # ensure defined version matches semver rules
-  if [[ ! "${version}" =~ $sem_ver_pattern ]]; then
-    die "Version (${version}) you defined does not match semantic version. Read more about it here: https://semver.org/"
-  fi
-
-  # ensure release notes exist
-  if [[ ! -f "docs/modules/ROOT/pages/release_notes/${version}.adoc" ]]; then
-    die "Please create release notes in docs/modules/ROOT/pages/release_notes/${version}.adoc and submit it over a Pull Request."
-  fi
-}
-
-validate_version "$1"
