@@ -1,4 +1,7 @@
 = Releases
+include::release_notes/v0.0.5.adoc[]
+
+include::release_notes/v0.0.4.adoc[]
 
 include::release_notes/v0.0.3.adoc[]
 
